Se añadio el connection string

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlConStr": "Data Source=.\\SQLEXPRESS;Database=YohualkisTejada_AP1_P2;Initial Catalog=YohualkisTejada_AP1_P2;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
