Se puso el connection string de azure

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConStr": "Data Source=.\\SQLEXPRESS;Database=YohualkisTejada_AP1_P2;Initial Catalog=YohualkisTejada_AP1_P2;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True"
+    "SqlConStr": "Server=tcp:consultasregistros.database.windows.net,1433;Database=BDConsultaRegistros;User Id=yohualkis;Password=8FI9miloco@;Encrypt=True;"
   },
   "Logging": {
     "LogLevel": {
